# meris

./: .env.example  .gitignore  AGENTS.md  BRAND.md  CHANGELOG.md  CLOUD.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  pyproject.toml
.githooks/: pre-commit
.meris/: settings.json  settings.yaml
docs/: DOGFOOD_7DAY.md  DOGFOOD_DAILY.md  E0_RELEASE_CHECKLIST.md  LOCAL_SETUP.md  MODELS.md  NATIVE_BINARY.md  PLAN_AGENT_WINDOW.md  PLAN_P5_4.md  PLAN_PHASE_E.md  PLAN_PHASE_F.md  PLAN_PHASE_G.md  PLAN_PHASE_I.md  PLAN_PHASE_J.md  PLAN_SAAS.md  PYPI_PUBLISH_READY.md  RATCHET_30MIN.md  RATCHET_DESIGN.md  README.md  RELEASE_v0.0.1.md  RELEASE_v0.0.2.md  ROUTE_B_COMPLETION.md  ROUTE_B_DOGFOOD.md  RUST_ROADMAP.md  USER_SETUP.md
meris/: __init__.py  __main__.py  benchmark.py  benchmark_regression.py  cli.py  config.py  env.py  loop.py  native.py  parallel.py  state.py
meris-rs/: Cargo.toml  README.md
meris-rs/src/: agent.rs  context.rs  dod.rs  events.rs  hooks.rs  lib.rs  main.rs  mcp.rs  permissions.rs  plan.rs  prompt.rs  provider.rs  review.rs  run_entry.rs  sandbox.rs  sandbox_macos.rs  seatbelt_policy.rs  sensors.rs  session.rs  settings.rs  tools.rs
scripts/: check_native_parity.py  check_tool_schemas_parity.py  dogfood-daily.ps1  dogfood-tasks.txt  install-git-hooks.sh  install_meris_rs_from_ci.ps1  publish-github.ps1  publish-pypi.ps1  run_benchmark_live.py  run_benchmark_mock.py  setup-local.ps1  stage_bundled_binary.py  sync-agent-html.js
templates/: AGENTS.md  PROGRESS.md  commit-guard.example.yaml  env.example  settings.example.yaml  settings.json  settings.models.example.json
tests/: conftest.py  test_anthropic_stream.py  test_approval_channel.py  test_benchmark_native.py  test_browse_directories.py  test_bundled_binary.py  test_cli.py  test_cli_commands_ui.py  test_cli_runner.py  test_commit_guard.py  test_composer_media_ui.py  test_diff_preview.py  test_dod_bridge.py  test_dogfood_check.py  test_dynamic_router.py  test_git_summary.py  test_harness_docs_ui.py  test_harness_improvements.py  test_harness_phase_e.py  test_harness_ui_data.py  test_hooks_bridge.py  test_main_module.py  (+39 more)
(+147 files in other folders)
