[project]
name = "meris-agent"
version = "0.7.0"
description = "Model-agnostic coding agent with first-class Harness engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]
mcp = ["mcp>=1.0.0"]
tui = ["textual>=1.0.0"]
anthropic = ["anthropic>=0.40.0"]
full = ["mcp>=1.0.0", "textual>=1.0.0", "anthropic>=0.40.0", "pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.scripts]
meris = "meris.cli:app"
forge = "meris.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meris"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: live API tests (DeepSeek)",
]
