[package]
name = "meris-rs"
version = "0.7.0"
edition = "2021"
description = "Meris Agent native core — context, permissions, harness I/O"
license = "MIT"

[[bin]]
name = "meris-rs"
path = "src/main.rs"

[lib]
name = "meris_rs"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
